# dsf

./: .gitignore  MANIFEST.in  README.md  README.qmd  convert_rdata.py  pyproject.toml  render pdf.bat  tight-title.tex
.github/workflows/: release.yaml
csv/: advertising.csv  bank.csv  caravan.csv  cereal.csv  churn.csv  churncredit.csv  churntel.csv  drug.csv  fertilizer.csv  house.csv  houseprice.csv  insurance.csv  marketing.csv  redwines.csv  risk.csv
dsf/: __init__.py  datasets.py  hybrid_nb.py
dsf.egg-info/: PKG-INFO  SOURCES.txt
dsf/data/: adult.pkl  advertising.pkl  bank.parquet  bank.pkl  caravan.pkl  cereal.parquet  cereal.pkl  churn.pkl  churnCredit.parquet  churnTel.parquet  churncredit.pkl  churntel.pkl  corona.parquet  diamonds.parquet  diamonds.pkl  drug.pkl  fertilizer.parquet  gapminder.pkl  house.parquet  house.pkl  housePrice.parquet  houseprice.pkl  insurance.parquet  insurance.pkl  marketing.parquet  marketing.pkl  mpg.pkl  redWines.parquet  risk.parquet  risk.pkl  whiteWines.parquet  whitewines.pkl
parquet/: adult.parquet  advertising.parquet  bank.parquet  caravan.parquet  cereal.parquet  churn.parquet  churnCredit.parquet  churnTel.parquet  corona.parquet  diamonds.parquet  drug.parquet  fertilizer.parquet  house.parquet  housePrice.parquet  insurance.parquet  marketing.parquet  mpg.parquet  redWines.parquet  risk.parquet  whiteWines.parquet
pickle/: adult.pkl  cereal.pkl  churncredit.pkl  diamonds.pkl  fertilizer.pkl  insurance.pkl  redwines.pkl
sourcedata/: adult.RData  advertising.RData  bank.RData  caravan.RData  cereal.RData  churn.RData  churn.csv  churnCredit.RData  churnTel.RData  drug.csv  fertilizer.RData  house.RData  housePrice.RData  insurance.RData  marketing.RData  redWines.RData  risk.RData  whiteWines.RData
sourcedata/broken/: corona.RData
