[project]
name = "dsf"
version = "0.0.2"
description = "dsf is a foundational Python package accompanying the book Data Science Foundations and Machine Learning with Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
    { name = "Jeroen van Raak", email = "j.j.f.vanraak@uva.nl" }
]

urls = { "Homepage" = "https://github.com/vanraak/dsf" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
dsf = ["data/*"]