[project]
name = "dsf"
version = "0.0.4"
description = "The dsf package provides a collection of datasets used in the book Data Science Foundations and Machine Learning with Python."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
    { name = "Jeroen van Raak", email = "j.j.f.vanraak@uva.nl" }
]

urls = { "Homepage" = "https://github.com/vanraak/dsf" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["dsf*"]
exclude = ["csv", "pickle", "sourcedata"]